--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="black_500">#2B2A2A</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray_300">#e0e0e0</color>
+    <color name="gray_500">#9E9E9E</color>
+    <color name="gray_700">#616161</color>
+    <color name="gray_800">#424242</color>
+
 </resources>
