--- a/app/src/main/res/layout/movie_detail_layout.xml
+++ b/app/src/main/res/layout/movie_detail_layout.xml
@@ -33,11 +33,14 @@
     <TextView
         android:id="@+id/movieTitle"
         style="@style/TextAppearance.MovieDetail.HeadLine"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/movie_detail_title_margin_top"
+        android:layout_marginEnd="@dimen/movie_detail_title_margin_end"
         tools:text="Narappa"
         app:layout_constraintStart_toEndOf="@id/startGuideline"
+        app:layout_constraintEnd_toStartOf="@id/endGuideline"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintTop_toBottomOf="@id/movie_poster" />
 
     <TextView
@@ -51,15 +54,18 @@
         tools:text="Supervillains Harley Quinn, Bloodsport, Peacemaker and a collection of nutty cons at Belle Reve prison join the super-secret, super-shady Task Force X as they are dropped off at the remote, enemy-infused island of Corto Maltese.Supervillains Harley Quinn, Bloodsport, Peacemaker and a collection of nutty cons at Belle Reve prison join the super-secret, super-shady Task Force X as they are dropped off at the remote, enemy-infused island of Corto Maltese."
         app:layout_constraintEnd_toStartOf="@id/endGuideline"
         app:layout_constraintStart_toEndOf="@id/startGuideline"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintTop_toBottomOf="@id/movieTitle" />
 
     <TextView
         android:id="@+id/cast"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/movie_rating_margin_top"
         android:text="Asa Butterfield, Gillian Anderson, Emma Mackey"
         style="@style/TextAppearance.MovieDetail.Overline"
+        app:layout_constraintEnd_toStartOf="@id/endGuideline"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@id/startGuideline"
         app:layout_constraintTop_toBottomOf="@id/overview" />
 
