--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,9 +4,9 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="movie_item_card_corner_radius_small">8dp</dimen>
     <dimen name="movie_item_height">100dp</dimen>
-    <dimen name="movie_poster_width">50dp</dimen>
+    <dimen name="movie_poster_width">60dp</dimen>
     <dimen name="movie_item_card_elevation">6dp</dimen>
-    <dimen name="guideline_begin">60dp</dimen>
+    <dimen name="guideline_begin">70dp</dimen>
     <dimen name="movie_item_tv_margin_top">2dp</dimen>
     <dimen name="movie_detail_backdrop_image_height">200dp</dimen>
     <dimen name="movie_detail_title_margin_top">18dp</dimen>
@@ -14,4 +14,5 @@
     <dimen name="movie_rating_margin_top">8dp</dimen>
     <dimen name="release_year_margin_top">8dp</dimen>
     <dimen name="duration_margin_start">4dp</dimen>
+    <dimen name="movie_detail_title_margin_end">20dp</dimen>
 </resources>
